# plato-tour-guide

./: LICENSE  README.md
ct_cuda_bridge/: IMPLEMENTATION_SUMMARY.md  README.md  benchmark.sh  ct_kernel_selector.py  h1_memory_patterns.cu  laman_constrained_layout.md  memory_latency_benchmark.cu  pythagorean48_cuda.cu  zhc_memory_model.md
cuda-consensus/: Cargo.toml  build.rs  python_binding.py
cuda-consensus/benches/: bench_compare.rs
cuda-consensus/kernels/: distance.cu  reduce.cu
cuda-consensus/src/: benchmark.rs  cuda_runtime.rs  distance.rs  lib.rs  matrix.rs  reduce.rs
cuda_consensus_kernel/: benchmark_cuda.py  build.sh  consensus_snap_kernel.cu  cosine_distance_kernel.cu  fortran_cuda_compare.md  spread_reduce_kernel.cu
edge_memory/: compile_time_checks.rs  fortran_arrays.f95  inter_thread_comms.md  memory_layout_diagram.md  memory_pool.rs  pool_benchmark.py  test_ring  tile_memory_model.md
formal_verification/: edge_memory_model.md  proof_checker.py  specification.md  theorem_proofs.md
fortran_gpu/: Makefile  README.md  cosine_kernel.f95  cuda_kernel.ptx  fortran_philosophy.md  kernel_benchmark.cu
plato_tour_guide/: __init__.py  cli.py  consensus.py  consensus_jit.py  consensus_perf.py  consensus_theory.py  easy.py  guide.py  matching.py  models.py  plato_client.py  tile.py
proof_carrying/: benchmark_overhead.py  formal_verification_pipeline.md  theorem_specifications.md  (+2 more)
rust-consensus/: Cargo.toml
rust-consensus/benches/: consensus.rs
rust-consensus/src/: clique.rs  debug.rs  distance.rs  lib.rs  python.rs  snap.rs  spread.rs
(+36 files in other folders)
