# plato-tour-guide/cuda-consensus/Cargo.toml
[package]
name = "plato_cuda_consensus"
version = "0.1.0"
edition = "2021"
description = "GPU-accelerated consensus for large Plato swarms with CPU fallback"
repository = "https://github.com/SuperInstance/plato-tour-guide"
license = "MIT"
authors = ["Cocapn Fleet"]

[lib]
crate-type = ["cdylib", "rlib"]
name = "plato_cuda_consensus"

[dependencies]
rayon = "1.10"
pyo3 = { version = "0.22", features = ["extension-module"], optional = true }
mimalloc = { version = "0.1", default-features = false }
rand = "0.8"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1